@@ -7,7 +7,7 @@
 package org.elasticsearch.xpack.idp.saml.rest.action;
 
 import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.common.ParseField;
+import org.elasticsearch.common.xcontent.ParseField;
 import org.elasticsearch.common.xcontent.ObjectParser;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
@@ -22,7 +22,6 @@ import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestRequest;
 import org.elasticsearch.xpack.idp.action.SamlValidateAuthnRequestResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.POST;
@@ -47,7 +46,7 @@ public class RestSamlValidateAuthenticationRequestAction extends IdpBaseRestHand
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(new Route(POST, "/_idp/saml/validate"));
+        return List.of(new Route(POST, "/_idp/saml/validate"));
     }
 
     @Override
