@@ -8,6 +8,7 @@ package org.elasticsearch.xpack.transform.rest.action.compat;
 
 
 import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.rest.BaseRestHandler;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.action.RestToXContentListener;
@@ -16,23 +17,18 @@ import org.elasticsearch.xpack.core.transform.TransformMessages;
 import org.elasticsearch.xpack.core.transform.action.DeleteTransformAction;
 import org.elasticsearch.xpack.core.transform.action.compat.DeleteTransformActionDeprecated;
 
-import java.util.Collections;
 import java.util.List;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.rest.RestRequest.Method.DELETE;
 
 public class RestDeleteTransformActionDeprecated extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<DeprecatedRoute> deprecatedRoutes() {
-        return singletonList(new DeprecatedRoute(DELETE, TransformField.REST_BASE_PATH_TRANSFORMS_BY_ID_DEPRECATED,
-                TransformMessages.REST_DEPRECATED_ENDPOINT));
+        return List.of(
+            Route.builder(DELETE, TransformField.REST_BASE_PATH_TRANSFORMS_BY_ID_DEPRECATED)
+                .deprecated(TransformMessages.REST_DEPRECATED_ENDPOINT, RestApiVersion.V_8).build()
+        );
     }
 
     @Override
@@ -46,7 +42,7 @@ public class RestDeleteTransformActionDeprecated extends BaseRestHandler {
         DeleteTransformAction.Request request = new DeleteTransformAction.Request(id, force);
 
         return channel -> client.execute(DeleteTransformActionDeprecated.INSTANCE, request,
-                new RestToXContentListener<>(channel));
+            new RestToXContentListener<>(channel));
     }
 
     @Override
